--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,7 +13,7 @@
 
 
     <!-- main css   -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" >
 
     {% if title %}
     <title> Django blog - {{ title }}</title>
@@ -73,7 +73,7 @@
     <script src="https://kit.fontawesome.com/b75c116a85.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap v.5.1.3 JavaScript Bundle with Popper -->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
