--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,17 +5,16 @@
         <form  method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">JOIN TODAY</legend>
-                {{ form|crispy }} 
+                <legend class="border-bottom mb-4">LOG IN</legend>
+                {{ form|crispy }}
             </fieldset>
-
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+                <button class="btn btn-outline-info" type="submit">LOG IN</button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Already have an account <a class="ml-2" href="{% url 'login' %}">Sign In</a>
+                Need An Account <a class="ml-2" href="{% url 'register' %}">Sign In</a>
             </small>
         </div>
     </div>
