--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
 {% block content %}
-    {% for post in posts %}
+    {% for post in post_list %}
         <article class="media content-section">
             <div class="media-body">
             <div class="article-metadata">
