--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -4,10 +4,14 @@
         <article class="media content-section">
             <div class="media-body">
             <div class="article-metadata">
+        
                 <a class="mr-2" href="#">{{ post.author }}</a>
                 <small class="text-muted">{{ post.date_posted | date:'d F ,Y'}}</small>
             </div>
             <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+            <div class="media col-md3">
+                <img class="img"  src="{ static 'images/blog_00.jpg' }">
+            </div>
             <p class="article-content">{{ post.content }}</p>
             </div>
         </article>
