--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,9 +1,15 @@
 {% extends 'blog/base.html' %}
 {% load crispy_forms_tags %}
+<!-- {% load static %} -->
 {% block content %}
+
 <div class="content-section">
     <div class="media">
-      <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+      {% if 'placeholder' in user.profile.image.url %}
+        <img class="rounded-circle account-img"  src="{% static 'images/blank.jpg' %}">
+  {% else %}
+        <img class="rounded-circle account-img"  src="{{ user.profile.image.url }}">
+  {% endif %}
       <div class="media-body">
         <h2 class="account-heading">{{ user.username }}</h2>
         <p class="text-secondary">{{ user.email}}</p>
@@ -11,5 +17,17 @@
       </div>
     </div>
     <!-- FORM HERE -->
+    <form  method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Profile Info</legend>
+            {{ u_form|crispy }} 
+            {{ p_form|crispy }} 
+        </fieldset>
+
+        <div class="form-group">
+            <button class="btn btn-outline-info" type="submit">Update</button>
+        </div>
+    </form>
   </div>
 {% endblock content %}
