--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
 {% load crispy_forms_tags %}
-<!-- {% load static %} -->
+{% load static %}
 {% block content %}
 
 <div class="content-section">
@@ -8,7 +8,9 @@
       {% if 'placeholder' in user.profile.image.url %}
         <img class="rounded-circle account-img"  src="{% static 'images/blank.jpg' %}">
   {% else %}
-        <img class="rounded-circle account-img"  src="{{ user.profile.image.url }}">
+  {% load cloudinary %}
+        <!-- <img class="img"  src="{{ user.profile.image.url }}"> -->
+        {% cloudinary  user.profile.image format="jpg" width=100 height=100 crop='fill' radius='max' %}
   {% endif %}
       <div class="media-body">
         <h2 class="account-heading">{{ user.username }}</h2>
