--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,27 +1,31 @@
 {% extends 'blog/base.html' %}
 {% block content %}
 {% load static %}
-{% load cloudinary %}
-    {% for post in post_list %}
+
         <article class="media content-section">
-            <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
+            <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
             <div class="media-body">
             <div class="article-metadata">
         
-                <a class="mr-2" href="#">{{ post.author }}</a>
-                <small class="text-muted">{{ post.date_posted | date:'d F ,Y'}}</small>
+                <a class="mr-2" href="#">{{ object.author }}</a>
+                <small class="text-muted">{{ object.date_posted | date:'d F ,Y'}}</small>
+                {% if object.author == user %}
+                <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'post-update' object.id %}"> Update</a>
+                <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' object.id %}"> Delete</a>
+                {% endif %}
             </div>
-            <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
+            <h2 class="article-title">{{ post.title }}</a></h2>
             <div class="media col-md3">
                 {% if 'placeholder' in post.featured_image.url %}
                     <img class="img"  src="{% static 'images/blog_00.jpg' %}">
                 {% else %}
+                {% load cloudinary %}
                     <!-- <img class="img"  src="{{ post.featured_image.url }}"> -->
                     {% cloudinary  post.featured_image format="jpg" width=100 height=100 crop='fill'  %}
                 {% endif %}
             </div>
-            <p class="article-content">{{ post.content }}</p>
+            <p class="article-content">{{ object.content }}</p>
             </div>
         </article>
-    {% endfor %}
+    
 {% endblock content %}
