--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -4,7 +4,12 @@
 {% load cloudinary %}
     {% for post in post_list %}
         <article class="media content-section">
-            <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
+            {% if 'placeholder' in post.author.profile.image.url %}
+            <img class="rounded-circle article-img"  src="{% static 'images/blank.jpg' %}">
+            {% else %}
+            <!-- <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}"> -->
+            {% cloudinary  post.author.profile.image format="jpg" width=65 height=65 crop='fill' radius='max' %}
+            {% endif %}
             <div class="media-body">
             <div class="article-metadata">
         
@@ -17,7 +22,7 @@
                     <img class="img"  src="{% static 'images/blog_00.jpg' %}">
                 {% else %}
                     <!-- <img class="img"  src="{{ post.featured_image.url }}"> -->
-                    {% cloudinary  post.featured_image format="jpg" width=100 height=100 crop='fill'  %}
+                    {% cloudinary  post.featured_image.url format="jpg" width=350 height=300 crop='fill'  %}
                 {% endif %}
             </div>
             <p class="article-content">{{ post.content }}</p>
