--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,14 +14,15 @@
                 <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' object.id %}"> Delete</a>
                 {% endif %}
             </div>
-            <h2 class="article-title">{{ post.title }}</a></h2>
+            <h2 class="article-title">{{ object.title }}</a></h2>
             <div class="media col-md3">
-                {% if 'placeholder' in post.featured_image.url %}
+                {% if 'placeholder' in object.featured_image.url %}
                     <img class="img"  src="{% static 'images/blog_00.jpg' %}">
                 {% else %}
                 {% load cloudinary %}
-                    <!-- <img class="img"  src="{{ post.featured_image.url }}"> -->
-                    {% cloudinary  post.featured_image format="jpg" width=100 height=100 crop='fill'  %}
+                    <!-- <img class="img"  src="{{ object.featured_image.url }}"> -->
+                    <!-- {% cloudinary  object.featured_image format="jpg" width=400  crop='fit'   %} -->
+                 {% cloudinary  object.featured_image format='jpg' width=500 height=400  crop='scale'  %}
                 {% endif %}
             </div>
             <p class="article-content">{{ object.content }}</p>
