--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -1,5 +1,6 @@
 {% extends 'blog/base.html' %}
 {% block content %}
+<h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
 {% load static %}
 {% load cloudinary %}
     {% for post in post_list %}
@@ -39,11 +40,11 @@
     {% for num in page_obj.paginator.page_range %}
         {% if page_obj.number == num %}
             <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
-            {% elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2' %}
+        {% elif  num > page_obj.number|add:'-2' and  num < page_obj.number|add:'2' %}
             <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
         {% endif %}
     {% endfor %}
-        {% if page_obj.paginator.has_next %}
+        {% if page_obj.has_next %}
         <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
         <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
         {% endif %}
